More deeper tree

--- a/examples/index.html
+++ b/examples/index.html
@@ -42,6 +42,24 @@ window.addEventListener("DOMContentLoaded", function () {
                             children: []
                         }
                     ]
+                },
+                {
+                    title: "Node2b",
+                    children: [
+                        {
+                            title: "Node2ba",
+                            children: []
+                        },
+                        {
+                            title: "Node2bb",
+                            children: [
+                                {
+                                    title: "Node2bba",
+                                    children: []
+                                }
+                            ]
+                        }
+                    ]
                 }
             ]
         }
